@@ -1,14 +1,11 @@
 package org.opennms.horizon.inventory.service;
 
-import java.time.LocalDateTime;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.opennms.cloud.grpc.minion.Identity;
-import org.opennms.horizon.grpc.heartbeat.contract.HeartbeatMessage;
 import org.opennms.horizon.grpc.heartbeat.contract.TenantLocationSpecificHeartbeatMessage;
 import org.opennms.horizon.inventory.dto.MonitoringSystemDTO;
+import org.opennms.horizon.inventory.exception.LocationNotFoundException;
 import org.opennms.horizon.inventory.mapper.MonitoringSystemMapper;
 import org.opennms.horizon.inventory.model.MonitoringLocation;
 import org.opennms.horizon.inventory.model.MonitoringSystem;
@@ -17,8 +14,9 @@ import org.opennms.horizon.inventory.repository.MonitoringSystemRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -34,46 +32,36 @@ public class MonitoringSystemService {
         return all
             .stream()
             .map(mapper::modelToDTO)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public Optional<MonitoringSystemDTO> findBySystemId(String systemId, String tenantId) {
         return systemRepository.findBySystemIdAndTenantId(systemId, tenantId).map(mapper::modelToDTO);
     }
 
-    public void addMonitoringSystemFromHeartbeat(TenantLocationSpecificHeartbeatMessage message) {
-        String tenantId = message.getTenantId();
-        String location = message.getLocation();
+    public void addMonitoringSystemFromHeartbeat(TenantLocationSpecificHeartbeatMessage message) throws LocationNotFoundException {
         Identity identity = message.getIdentity();
-
-        Optional<MonitoringSystem> msOp = systemRepository.findBySystemIdAndTenantId(identity.getSystemId(), tenantId);
-        if(msOp.isEmpty()) {
-            Optional<MonitoringLocation> locationOp = locationRepository.findByLocationAndTenantId(location, tenantId);
-            MonitoringLocation monitoringLocatgion = new MonitoringLocation();
-            if(locationOp.isPresent()) {
-                monitoringLocatgion = locationOp.get();
-            } else {
-                monitoringLocatgion.setLocation(location);
-                monitoringLocatgion.setTenantId(tenantId);
-                var newLocation = locationRepository.save(monitoringLocatgion);
-                // Send config updates asynchronously to Minion
-                configUpdateService.sendConfigUpdate(newLocation.getTenantId(), newLocation.getLocation());
-
-            }
-
-            MonitoringSystem monitoringSystem = new MonitoringSystem();
+        MonitoringSystem monitoringSystem;
+        Optional<MonitoringSystem> msOp = systemRepository.findBySystemIdAndTenantId(identity.getSystemId(), message.getTenantId());
+        if (msOp.isEmpty()) {
+            MonitoringLocation location = locationRepository.findByLocationAndTenantId(message.getLocation(), message.getTenantId())
+                .orElseThrow(() -> new LocationNotFoundException("Location not found " + message.getLocation()));
+            monitoringSystem = new MonitoringSystem();
             monitoringSystem.setSystemId(identity.getSystemId());
-            monitoringSystem.setMonitoringLocation(monitoringLocatgion);
-            monitoringSystem.setTenantId(tenantId);
+            monitoringSystem.setMonitoringLocation(location);
+            monitoringSystem.setTenantId(message.getTenantId());
             monitoringSystem.setLastCheckedIn(LocalDateTime.now());
             monitoringSystem.setLabel(identity.getSystemId().toUpperCase());
-            monitoringSystem.setMonitoringLocationId(monitoringLocatgion.getId());
+            monitoringSystem.setMonitoringLocationId(location.getId());
             systemRepository.save(monitoringSystem);
         } else {
-            MonitoringSystem monitoringSystem = msOp.get();
+            monitoringSystem = msOp.get();
             monitoringSystem.setLastCheckedIn(LocalDateTime.now());
             systemRepository.save(monitoringSystem);
         }
+
+        // Asynchronously send config updates to Minion
+        configUpdateService.sendConfigUpdate(message.getTenantId(), message.getLocation());
     }
 
     @Transactional
@@ -86,7 +74,7 @@ public class MonitoringSystemService {
             var tenantId = monitoringSystem.getTenantId();
             systemRepository.deleteById(id);
             var retrieved = systemRepository.findByMonitoringLocationIdAndTenantId(optionalMS.get().getMonitoringLocationId(), tenantId);
-            if (retrieved.size() == 0) {
+            if (retrieved.isEmpty()) {
                 locationRepository.delete(monitoringSystem.getMonitoringLocation());
                 configUpdateService.removeConfigsFromTaskSet(tenantId, location);
             }
